[package]
name = "api"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.40.0", features = ["full"] }
serde_json = "1.0.128"
tokio-stream = "0.1.16"
ethers = { version = "2.0.14", features = ["ws"] }
axum = "0.7.7"
sqlx = { version = "0.8.2", features = ["migrate", "postgres", "runtime-tokio", "uuid", "chrono", "bigdecimal"] }
uuid = { version = "1.10.0", features = ["v4", "serde"] }
tower-http = { version = "0.6.1", features = ["trace"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter", "json"] }
serde = { version = "1.0.210", features = ["derive"] }
chrono = { version = "0.4.38", features = ["serde"] }
bigdecimal = { version = "0.4.5", features = ["serde"] }
