[package]
name = "api"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.40.0", features = ["full"] }
serde_json = "1.0.128"
tokio-stream = "0.1.16"
ethers = { version = "2.0.14", features = ["ws"] }
axum = "0.7.7"
sqlx = { version = "0.8.2", features = ["migrate", "postgres", "runtime-tokio", "uuid", "chrono", "bigdecimal"] }
uuid = { version = "1.10.0", features = ["v4", "serde"] }
tower-http = { version = "0.6.1", features = ["cors", "trace"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter", "json"] }
serde = { version = "1.0.210", features = ["derive"] }
chrono = { version = "0.4.38", features = ["serde"] }
bigdecimal = { version = "0.4.5", features = ["serde"] }
futures = "0.3.31"
async-channel = "2.3.1"
rs-firebase-admin-sdk = "2.3.1"
jsonwebtoken = "9.3.0"
axum-extra = {version = "0.9.4", features = ["cookie"] }
time = "0.3.36"
tgbot = { version = "0.31.0", features = ["webhook"] }
reqwest = "0.12.9"
redis = { version = "0.27.5", features = ["aio", "tokio-comp"] }
